kubernetes/apps/network/external-service/app/adguard.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: adguard
subsets:
  - addresses:
      - ip: 192.168.50.1
    ports:
      - port: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: adguard
spec:
  ports:
    - port: 80
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-internal
  annotations:
    external-dns.alpha.kubernetes.io/target: "192.168.50.160,192.168.50.182,192.168.50.234"
spec:
  ingressClassName: internal
  rules:
    - host: adguard.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard
                port:
                  number: 80
