kubernetes/apps/network/external-service/app/code-server.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: code-server
subsets:
  - addresses:
      - ip: 192.168.50.164
    ports:
      - port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: code-server
spec:
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server-internal
  annotations:
    external-dns.alpha.kubernetes.io/target: "192.168.50.160,192.168.50.182,192.168.50.234"
spec:
  ingressClassName: internal
  rules:
    - host: code-server.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: code-server
                port:
                  number: 80
