kubernetes/apps/network/external-service/app/download.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: download
subsets:
  - addresses:
      - ip: 192.168.50.171
    ports:
      - port: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: download
spec:
  ports:
    - port: 80
      targetPort: 8090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: download-internal
  annotations:
    external-dns.alpha.kubernetes.io/target: "192.168.50.160,192.168.50.182,192.168.50.234"
spec:
  ingressClassName: internal
  rules:
    - host: download.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: download
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: download
  annotations:
    external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
spec:
  ingressClassName: external
  rules:
    - host: download.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: download
                port:
                  number: 80
