kubernetes/apps/network/external-service/app/gitlab.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: gitlab
subsets:
  - addresses:
      - ip: 192.168.50.178
    ports:
      - port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab
spec:
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-internal
  annotations:
    external-dns.alpha.kubernetes.io/target: "192.168.50.160,192.168.50.182,192.168.50.234"
spec:
  ingressClassName: internal
  rules:
    - host: gitlab.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitlab
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab
  annotations:
    external-dns.alpha.kubernetes.io/target: external-old.${SECRET_DOMAIN}
spec:
  ingressClassName: external
  rules:
    - host: gitlab.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitlab
                port:
                  number: 80
