kubernetes/apps/network/external-service/app/iyuu.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: iyuu
subsets:
  - addresses:
      - ip: 192.168.50.170
    ports:
      - port: 8780
---
apiVersion: v1
kind: Service
metadata:
  name: iyuu
spec:
  ports:
    - port: 80
      targetPort: 8780
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iyuu-internal
  annotations:
    external-dns.alpha.kubernetes.io/target: "192.168.50.160,192.168.50.182,192.168.50.234"
spec:
  ingressClassName: internal
  rules:
    - host: iyuu.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: iyuu
                port:
                  number: 80
