kubernetes/apps/network/external-service/app/jellyfin.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: jellyfin
subsets:
  - addresses:
      - ip: 192.168.50.221
    ports:
      - port: 8096
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  ports:
    - port: 80
      targetPort: 8096

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  annotations:
    external-dns.alpha.kubernetes.io/target: external-old.${SECRET_DOMAIN}
spec:
  ingressClassName: external
  rules:
    - host: jellyfin.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 80
