kubernetes/apps/network/external-service/app/omv.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: omv
subsets:
  - addresses:
      - ip: 192.168.50.200
    ports:
      - port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: omv
spec:
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: omv-internal
  annotations:
    external-dns.alpha.kubernetes.io/target: "192.168.50.160,192.168.50.182,192.168.50.234"
spec:
  ingressClassName: internal
  rules:
    - host: omv.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: omv
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: omv
  annotations:
    external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
spec:
  ingressClassName: external
  rules:
    - host: omv.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: omv
                port:
                  number: 80
