kubernetes/apps/network/external-service/app/photo.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: photo
subsets:
  - addresses:
      - ip: 192.168.50.200
    ports:
      - port: 2342
---
apiVersion: v1
kind: Service
metadata:
  name: photo
spec:
  ports:
    - port: 80
      targetPort: 2342
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photo-internal
  annotations:
    external-dns.alpha.kubernetes.io/target: "192.168.50.160,192.168.50.182,192.168.50.234"
spec:
  ingressClassName: internal
  rules:
    - host: photo.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: photo
                port:
                  number: 80
