kubernetes/apps/network/external-service/app/portainer.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: portainer
subsets:
  - addresses:
      - ip: 192.168.50.170
    ports:
      - port: 9443
---
apiVersion: v1
kind: Service
metadata:
  name: portainer
spec:
  ports:
    - port: 443
      targetPort: 9443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer-internal
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    external-dns.alpha.kubernetes.io/target: "192.168.50.160,192.168.50.182,192.168.50.234"
spec:
  ingressClassName: internal
  rules:
    - host: portainer.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portainer
                port:
                  number: 443
