kubernetes/apps/network/external-service/app/pve.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: pve
subsets:
  - addresses:
      - ip: 192.168.50.100
    ports:
      - port: 8006
---
apiVersion: v1
kind: Service
metadata:
  name: pve
spec:
  ports:
    - port: 443
      targetPort: 8006
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pve-internal
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    external-dns.alpha.kubernetes.io/target: "192.168.50.160,192.168.50.182,192.168.50.234"
spec:
  ingressClassName: internal
  rules:
    - host: pve.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pve
                port:
                  number: 443
