kubernetes/apps/network/external-service/app/registry.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: registry
subsets:
  - addresses:
      - ip: 192.168.50.178
    ports:
      - port: 5050
---
apiVersion: v1
kind: Service
metadata:
  name: registry
spec:
  ports:
    - port: 80
      targetPort: 5050
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-internal
  annotations:
    external-dns.alpha.kubernetes.io/target: "192.168.50.160,192.168.50.182,192.168.50.234"
spec:
  ingressClassName: internal
  rules:
    - host: registry.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry
  annotations:
    external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
spec:
  ingressClassName: external
  rules:
    - host: registry.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry
                port:
                  number: 80
