kubernetes/apps/network/external-service/app/seed.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: seed
subsets:
  - addresses:
      - ip: 192.168.50.240
    ports:
      - port: 9091
---
apiVersion: v1
kind: Service
metadata:
  name: seed
spec:
  ports:
    - port: 80
      targetPort: 9091
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seed-internal
  annotations:
    external-dns.alpha.kubernetes.io/target: "192.168.50.160,192.168.50.182,192.168.50.234"
spec:
  ingressClassName: internal
  rules:
    - host: seed.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seed
                port:
                  number: 80
